--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Bon courage pour la suite! -->
     <div id="div_1">
         <h1>Petit casse tête...</h1>
         <p>Voici pour vous jeunes élèves de première spé maths un petit défi...<br>
-            Quelques conseils qui pourraient vous être utiles dans vos recherches son dissimulés sur cette page... Trouverez vous le Saint- Graal ?! <br>
+            Quelques conseils qui pourraient vous être utile dans vos recherches son dissimulés sur cette page... Trouverez vous le Saint- Graal ?! <br>
             Bon courage, et soyez perséverant !</p>
     </div>
 
