--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@ Bon courage pour la suite! -->
 <body>
     <div id="div_1">
         <h1>Petit casse tête...</h1>
-        <p>Voici pour vous jeunes élèves de première spé maths un petit défi...<br>
-            Quelques conseils qui pourraient vous être utile dans vos recherches son dissimulés sur cette page... Trouverez vous le Saint- Graal ?! <br>
-            Bon courage, et soyez perséverant !</p>
+        <p>Si dans la source tu trouves le chemin, seule ta perspicacité te permettra d'aller plus loin!</p>
     </div>
 
 </body>
