--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ Bon courage pour la suite! -->
 
 <body>
     <div id="div_1">
+        <!--mot de passe : mot de quatre lettres associé par A1Z26, au quintuple du plus petit nombre premier dont la somme des chiffres vaut 20. -->
         <h1>Petit casse tête...</h1>
         <p>Si dans la source tu trouves le chemin, seule ta perspicacité te permettra d'aller plus loin!</p>
     </div>
