--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@ Bon courage pour la suite! -->
 <body>
     <div id="div_1">
         <!--mot de passe : mot de quatre lettres associé par A1Z26, au quintuple du plus petit nombre premier dont la somme des chiffres vaut 20. -->
-        <h1>Petit casse tête...</h1>
-        <p>Si dans la source tu trouves le chemin, seule ta perspicacité te permettra d'aller plus loin!</p>
+        <h1>Petit casse tête...pour coups de pouce</h1>
+        <p>Si dans la source tu trouves le chemin, seule ta perspicacité te permettra d'aller plus loin!<br>
+        Ainsi, pour le groupe les coups de pouce tu obtiens....et le héros de la classe tu deviens!</p>
     </div>
 
 </body>
